--- a/d012/files/style.css
+++ b/d012/files/style.css
@@ -1,28 +1,40 @@
-@charset 'UTF-8';
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 
 :root{
     --font1: Verdana, Geneva, Tahoma, sans-serif ;
-    --font2: 'Passion One', cursive; 
+    --font2: 'Passion One', sans-serif; 
+    --font3: 'Sriracha', cursive;
 }
 
-* {
+*{
     margin: 0px;
+    padding: 0px;
 }
-body {
-    min-width: 100vh;
+
+html, body {
+    min-width: 100vw;
+    min-height: 100vh;
     background-color: white;
     font-family: var(--font1);
 }
+
 header {
     background-color: black;
-    padding: 57px 0px ;
 }
 
 h1 {
-    font-family: var(--font1);
-    font-size: 10vw;
+    font-family: var(--font2);
+    font-size: 5vw;
     color: white;
     text-align: center;
+    font-variant: small-caps;
+    padding-top: 50px;
+    font-size: 10vw;
 }
 
 header p {
@@ -30,89 +42,59 @@ header p {
     font-size: 2vw;
     color: white;
     text-align: center;
+    padding-bottom: 50px;
 }
 
-header > p > a {
+a {
     text-decoration: none;
     color: white;
     font-family: var(--font1);
 }
 
-
-section.normal {
-    height: 50vh;
-    width: 100vh;
-
-}
-section.normal p {
-    font-family: var(--font2);
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     line-height: 2em;
-    padding: 2em 0em;
-    margin: 0px;
-    width: auto;
-    height: 100vh;
-    color:black;
-    font-size: 2.5vw;
-    font-weight: bold;
+    padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3vw;
 }
 
-section.imagem#img01{
-    background: black url(imagens/background001.jpg) right center no-repeat fixed;
-    background-size: cover;
-    padding: 2em;
-    position: relative;
-    display: block;
-    width: 100vw;
-    height: 50vh;
+section p{
+    padding-bottom: 2em;
 }
-section.imagem#img01 p {
-    background-color: rgba(0, 0, 0, 0.308);
-    font-family: var(--font2);
-    line-height: 2em;
-    padding: 2em 0em;
-    margin: 0px;
-    width: auto;
+
+section.normal{
+    background-color: white;
+    color: black;
+}
+
+section.imagem{
+    background-color: rgb(82, 81, 81);
     color: white;
-    font-size: 2.5vw;
-    font-weight: bold;
-    position: absolute
-    
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.616);
 }
 
-section.imagem#img02{
-    background: black url(imagens/background002.jpg) right center no-repeat fixed;
+section.imagem p {
+    background-color: rgba(0, 0, 0, 0.267);
+    display: inline-block;
+    padding: 15px;
+    text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.699);
+}
+
+#img01{
+    background: rgb(82, 81, 81) url(imagens/background001.jpg) center center no-repeat fixed;
     background-size: cover;
-    position: relative;
-    padding: 2em;
-    display: block;
-    width: 100vw;
-    height: 50vh;
 }
 
-section.imagem#img02 p {
-    background-color: rgba(0, 0, 0, 0.308);
-    font-family: var(--font2);
-    line-height: 2em;
-    padding: 2em 0em;
-    margin: 0px;
-    width: auto;
-    color: white;
-    font-size: 2.5vw;
-    font-weight: bold;
-    position: absolute;
+#img02{
+    background: rgb(82, 81, 81) url(imagens/background002.jpg) center center no-repeat fixed;
+    background-size: cover;
 }
 
-footer {
+footer{
     background-color: black;
-    margin: auto;
-    padding: 1em 0em;
-}
-footer p{
+    color: white;
     text-align: center;
-    color: white;
-}
-
-footer a {
-    text-decoration: none;
-    color: white;
+    padding: 10px;
 }
